--- a/exploration/memory_exploration.ipynb
+++ b/exploration/memory_exploration.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook explores how year relates to sales price. In summary:\n",
-    "- Newer laptops sell for more.\n",
-    "- Including year in the title hurts selling price, and the effect is most consistent if the laptop is older.\n",
-    "- There appears to be little/no relationship between listing description and year."
+    "This notebook explores how memory—or storage capacity—relates to sales price. In summary:\n",
+    "- Laptops with higher capacity sell for more.\n",
+    "- Including memory capacity in the title generally raises selling price, and the effect is especially great when the laptop has high capacity.\n",
+    "- The same relationship holds between listing description and memory, though it's more subtle."
    ]
   },
   {
