--- a/exploration/memory_exploration.ipynb
+++ b/exploration/memory_exploration.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -61,124 +61,124 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>9206</th>\n",
-       "      <td>3.243120e+11</td>\n",
-       "      <td>Apple MacBook Pro Late 2016 15\" TOUCH BAR 16GB...</td>\n",
-       "      <td>2016.0</td>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Used Apple MacBook Pro 17 Inch, 2.2GHz quad-co...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>700.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Used Space Gray Macbook pro 15' (2017) with To...</td>\n",
+       "      <td>2017.0</td>\n",
        "      <td>15.0</td>\n",
-       "      <td>512</td>\n",
+       "      <td>16</td>\n",
        "      <td>1</td>\n",
-       "      <td>Apple MacBook Pro Late 2016 15\" TOUCH BAR 16GB...</td>\n",
-       "      <td>Used</td>\n",
-       "      <td>1279.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>Used Space Gray Macbook pro 15' (2017) with To...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>19</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Macbook Pro A1297 Mid 2011 17' 2.3 GHz 8GB RAM...</td>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Macbook Pro A1297 Mid 2011 17' 2.3 GHz 8GB RAM...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>310.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "      <td>96</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>354</td>\n",
        "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9207</th>\n",
-       "      <td>4.024630e+11</td>\n",
-       "      <td>\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n    ...</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>15.4</td>\n",
-       "      <td>256</td>\n",
+       "      <th>3</th>\n",
+       "      <td>2.940000e+11</td>\n",
+       "      <td>I have a beautiful MacBook Pro for sale. It ha...</td>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>120</td>\n",
        "      <td>1</td>\n",
-       "      <td>Apple Macbook Pro 15âÃÃ¹ MJLU2LL/A Retina (...</td>\n",
-       "      <td>Used</td>\n",
-       "      <td>710.0</td>\n",
-       "      <td>9.0</td>\n",
+       "      <td>Apple MacBook Pro OSX 2016 2.53GHz 4GB 120GB S...</td>\n",
+       "      <td>Seller refurbished</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>...</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "      <td>694</td>\n",
-       "      <td>15</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>286</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9210</th>\n",
-       "      <td>1.844690e+11</td>\n",
-       "      <td>For sale is an excellent condition Space Grey ...</td>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>13.3</td>\n",
-       "      <td>256</td>\n",
+       "      <th>4</th>\n",
+       "      <td>2.750000e+11</td>\n",
+       "      <td>MacBook Pro 13inch (Early 2011) in great condi...</td>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>120</td>\n",
        "      <td>1</td>\n",
-       "      <td>Apple MacBook Pro 2018 Touch Bar Core i7 / 16G...</td>\n",
+       "      <td>MacBook Pro 13-inch Early 2011 120GB SSD/10GB RAM</td>\n",
        "      <td>Used</td>\n",
-       "      <td>1299.0</td>\n",
+       "      <td>249.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>447</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9211</th>\n",
-       "      <td>1.844690e+11</td>\n",
-       "      <td>For sale is an excellent condition Space Grey ...</td>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>13.3</td>\n",
-       "      <td>256</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Apple MacBook Pro 2018 Touch Bar Core i7 / 16G...</td>\n",
-       "      <td>Used</td>\n",
-       "      <td>1299.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>447</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9214</th>\n",
-       "      <td>3.132410e+11</td>\n",
-       "      <td>Apple MacBook Pro A1502 13.3 inch Laptop - MF8...</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>13.3</td>\n",
-       "      <td>512</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Apple MacBook Pro A1502 13.3 inch Laptop - MF8...</td>\n",
-       "      <td>Used</td>\n",
-       "      <td>480.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>20</td>\n",
-       "      <td>10</td>\n",
+       "      <td>906</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -186,59 +186,59 @@
        "</div>"
       ],
       "text/plain": [
-       "            itemId                                        description    year  \\\n",
-       "9206  3.243120e+11  Apple MacBook Pro Late 2016 15\" TOUCH BAR 16GB...  2016.0   \n",
-       "9207  4.024630e+11  \\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\n    ...  2015.0   \n",
-       "9210  1.844690e+11  For sale is an excellent condition Space Grey ...  2018.0   \n",
-       "9211  1.844690e+11  For sale is an excellent condition Space Grey ...  2018.0   \n",
-       "9214  3.132410e+11  Apple MacBook Pro A1502 13.3 inch Laptop - MF8...  2015.0   \n",
+       "         itemId                                        description    year  \\\n",
+       "0           NaN                                                NaN  2011.0   \n",
+       "1           NaN  Used Space Gray Macbook pro 15' (2017) with To...  2017.0   \n",
+       "2           NaN  Macbook Pro A1297 Mid 2011 17' 2.3 GHz 8GB RAM...  2011.0   \n",
+       "3  2.940000e+11  I have a beautiful MacBook Pro for sale. It ha...  2009.0   \n",
+       "4  2.750000e+11  MacBook Pro 13inch (Early 2011) in great condi...  2011.0   \n",
        "\n",
-       "      size  memory  containsDescription  \\\n",
-       "9206  15.0     512                    1   \n",
-       "9207  15.4     256                    1   \n",
-       "9210  13.3     256                    1   \n",
-       "9211  13.3     256                    1   \n",
-       "9214  13.3     512                    1   \n",
+       "   size  memory  containsDescription  \\\n",
+       "0  17.0      16                    0   \n",
+       "1  15.0      16                    1   \n",
+       "2  17.0      80                    1   \n",
+       "3  15.0     120                    1   \n",
+       "4  13.0     120                    1   \n",
        "\n",
-       "                                                  title condition   price  \\\n",
-       "9206  Apple MacBook Pro Late 2016 15\" TOUCH BAR 16GB...      Used  1279.0   \n",
-       "9207  Apple Macbook Pro 15âÃÃ¹ MJLU2LL/A Retina (...      Used   710.0   \n",
-       "9210  Apple MacBook Pro 2018 Touch Bar Core i7 / 16G...      Used  1299.0   \n",
-       "9211  Apple MacBook Pro 2018 Touch Bar Core i7 / 16G...      Used  1299.0   \n",
-       "9214  Apple MacBook Pro A1502 13.3 inch Laptop - MF8...      Used   480.0   \n",
+       "                                               title           condition  \\\n",
+       "0  Used Apple MacBook Pro 17 Inch, 2.2GHz quad-co...                 NaN   \n",
+       "1  Used Space Gray Macbook pro 15' (2017) with To...                 NaN   \n",
+       "2  Macbook Pro A1297 Mid 2011 17' 2.3 GHz 8GB RAM...                 NaN   \n",
+       "3  Apple MacBook Pro OSX 2016 2.53GHz 4GB 120GB S...  Seller refurbished   \n",
+       "4  MacBook Pro 13-inch Early 2011 120GB SSD/10GB RAM                Used   \n",
        "\n",
-       "      watchCount  ...  used_in_description  used_in_title  \\\n",
-       "9206         2.0  ...                 True          False   \n",
-       "9207         9.0  ...                 True          False   \n",
-       "9210         2.0  ...                 True          False   \n",
-       "9211         2.0  ...                 True          False   \n",
-       "9214         1.0  ...                 True          False   \n",
+       "    price  watchCount  ...  used_in_description  used_in_title  \\\n",
+       "0   700.0         NaN  ...                False           True   \n",
+       "1  1000.0         NaN  ...                 True           True   \n",
+       "2   310.0         NaN  ...                 True           True   \n",
+       "3   300.0         7.0  ...                 True          False   \n",
+       "4   249.0         2.0  ...                False          False   \n",
        "\n",
-       "      year_in_description  year_in_title  size_in_description  size_in_title  \\\n",
-       "9206                 True           True                 True           True   \n",
-       "9207                False          False                False          False   \n",
-       "9210                False           True                 True          False   \n",
-       "9211                False           True                 True          False   \n",
-       "9214                 True           True                 True           True   \n",
+       "   year_in_description  year_in_title  size_in_description  size_in_title  \\\n",
+       "0                False          False                False           True   \n",
+       "1                 True           True                 True           True   \n",
+       "2                 True           True                 True           True   \n",
+       "3                False          False                 True           True   \n",
+       "4                 True           True                 True           True   \n",
        "\n",
-       "      memory_in_description  memory_in_title  n_words_in_description  \\\n",
-       "9206                   True             True                      96   \n",
-       "9207                   True             True                     694   \n",
-       "9210                   True             True                     447   \n",
-       "9211                   True             True                     447   \n",
-       "9214                  False            False                      20   \n",
+       "   memory_in_description  memory_in_title  n_words_in_description  \\\n",
+       "0                  False             True                       0   \n",
+       "1                  False            False                      19   \n",
+       "2                  False            False                     354   \n",
+       "3                   True             True                     286   \n",
+       "4                   True             True                     906   \n",
        "\n",
-       "      n_words_in_title  \n",
-       "9206                15  \n",
-       "9207                15  \n",
-       "9210                16  \n",
-       "9211                16  \n",
-       "9214                10  \n",
+       "   n_words_in_title  \n",
+       "0                12  \n",
+       "1                 9  \n",
+       "2                15  \n",
+       "3                13  \n",
+       "4                 7  \n",
        "\n",
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
     "#since we're visualizing data in connection with memory, drop missing values for memory\n",
     "laptopData = laptopData.dropna(subset=['memory'])\n",
     "laptopData['memory'] = laptopData['memory'].astype(int)\n",
-    "laptopData.tail()"
+    "laptopData.head()"
    ]
   },
   {
