--- a/exploration/year_exploration.ipynb
+++ b/exploration/year_exploration.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook explores how year relates to sales price. In summary:\n",
+    "This notebook explores how manufacture year relates to sales price. The listings I pulled consisted entirely of sales ending in September of 2020, hence manufacture year is the same as laptop age. In summary:\n",
     "- Newer laptops sell for more.\n",
     "- Including year in the title hurts selling price, and the effect is most consistent if the laptop is older.\n",
     "- There appears to be little/no relationship between listing description and year."
