--- a/data_exploration/size_exploration.ipynb
+++ b/data_exploration/size_exploration.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Data exploration summary: screen size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This notebook explores how screen size relates to sales price.\n",
     "- Bigger laptops sell for more.\n",
     "- *Generally*, including size in the title and descirption is associated with higher sale price.\n",
