--- a/data_exploration/year_exploration.ipynb
+++ b/data_exploration/year_exploration.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Data exploration summary: manufacture year"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This notebook explores how manufacture year relates to sales price. The listings I pulled consisted entirely of sales ending in September of 2020, hence manufacture year is the same as laptop age. In summary:\n",
     "- Newer laptops sell for more.\n",
     "- Including year in the title hurts selling price, and the effect is most consistent if the laptop is older.\n",
