--- a/data_exploration/memory_exploration.ipynb
+++ b/data_exploration/memory_exploration.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Data exploration summary: memory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This notebook explores how memory—or storage capacity—relates to sales price. In summary:\n",
     "- Laptops with higher capacity sell for more.\n",
     "- Including memory capacity in the title generally raises selling price, and the effect is especially great when the laptop has high capacity.\n",
