adding data exploratino read me and minor edits

--- a/modeling/modeling_results.ipynb
+++ b/modeling/modeling_results.ipynb
@@ -6,9 +6,14 @@
    "source": [
     "## Modeling results\n",
     "\n",
-    "Print results for the baseline linear regression model, full linear model, and a Lasso (i.e., linear model with L1 prior) with the same features as the full model. Print validation metric results.\n",
-    "- Notice the 0.35-point rise in R-squared and 10-point drop in RMSE!\n",
-    "- Not all features are important, per the Lasso."
+    "Brief notebook giving the results for the baseline linear regression model, full linear model, and a Lasso (i.e., linear model with L1 prior) with the same features as the full model. Print validation metric results.\n",
+    "\n",
+    "The model coefficients of the features mirror the findings of the data exploration:\n",
+    "- Including the laptop's storage capacity in the title/description results in price gains\n",
+    "- Including the laptop's screen size in the title/description results in price gains\n",
+    "- Including the laptop's manufacture year in the title/description generally results in a small loss (see data exploration for more discussion)\n",
+    "\n",
+    "Relative to the specs-only baseline, the full model scores 20 points lower on RMSE and 3.5% higher on R-squared, suggesting that these text-based features really are predictive of price, and that sellers should approach title and description creation strategically."
    ]
   },
   {
@@ -236,6 +241,13 @@
     "laptopData = model.read_data()\n",
     "laptopData.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
